--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veltrixreact",
+  "name": "ui-sample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -96,7 +96,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "nvm": "react-scripts build ",
+    "build": "react-scripts build ",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,jsx,json,md,html,css,less,scss}\"",
     "test": "react-scripts test",
