--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REACT_APP_STORAGEBUCKET=VNIT-admin.appspot.com
 REACT_APP_MESSAGINGSENDERID=427667224207
 REACT_APP_APPID=1:427667224207:web:3b97af80b8b4824619a2fa
 REACT_APP_MEASUREMENTID=G-S4LDYNV7FY
+URL_AUTH=https://apps-vn-st.sunlifecorp.com/auth/oauth/token
