--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "availity-reactstrap-validation": "^2.7.1",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.1.3",
     "chart.js": "^2.9.4",
     "chartist": "^0.11.4",
     "classnames": "^2.3.1",
@@ -89,7 +89,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
-    "redux-saga": "^1.1.3",
+    "redux-saga": "^1.2.1",
     "simplebar-react": "^2.3.3",
     "styled-components": "^5.3.0",
     "toastr": "^2.1.4"
